--- a/src/Predicate.Parser/Predicate.Parser.csproj
+++ b/src/Predicate.Parser/Predicate.Parser.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Antlr4.Runtime.Standard" Version="4.8.0" />
+  </ItemGroup>
+
 </Project>
